2000-06-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/scanner-smi.l: Fixed scanning of module files ending
	without a newline.

	* win/: Juergen changed some win things.

2000-06-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/RFC-1212: fixed recursive import.

	* lib/check.c: Juergen added various checks for INDEX clauses.

	* lib/check.c: added various checks for range and size restrictions.

2000-06-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c (smiReadConfig): Fixed path separator when path
	values from the configuration file get concatenated.

	* mibs/ietf/: Fixed some imports.

	* win/makefile.vc: Minor fixes. Thanks to Yigal Hochberg.

2000-06-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.3.tar.gz: released version 0.2.3.

	* Makefile.am: added the win/ directory to the distribution.

2000-06-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.2.tar.gz: released version 0.2.2.

	* Juergen sent a huge patch: moved parser checks to a separate
        C file, aligned error messages, aligned identifier prefixes,
        aligned MIB test suite.

	* mibs/ietf/INET-ADDRESS-MIB: added (RFC 2851).

2000-06-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: added a missing .0 instance indentifier
	for scalar objects.

	* lib/error.c: Juergen added some code for error lists and
	error handlers.
	
2000-06-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Juergen refined the conditional expensive checks
	for identifier redefinitions.

	* lib/util.c: introduced a unique identifer prefix for util
	functions.

	* tools/dump-jax.c: fixed some compiler warnings.

	* lib/parser-smi.y: fixed some compiler warnings.
	
	* lib/parser-smi.y: adjusted lines of definition in cases of
	forward references.

	* lib/data.c (freeData): fixed a misplaced free() that caused
	endless loops.

	* mibs/ietf/: removed RFC-1213 and fixed some modules to
	import RFC1213-MIB instead of RFC-1213.
